--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,7 @@
   display: flex;
   margin: 0 auto;
   justify-content: center;
-  align-items: center;
-  height: 900px;
+  height: 500px;
   width: 1300px;
 }
 
@@ -21,10 +20,11 @@
   border: 2px solid rgb(117, 117, 117);
   transition: background-color 0.5s ease-out;
   overflow: hidden;
+  max-height: 390px;
 }
 
 .card:hover {
-  background-color: aqua;
+  background-color: rgb(90, 69, 117);
 }
 
 .card .card__image-rotate {
@@ -69,4 +69,17 @@
 
 .card .card__image-skew:hover {
   transform: skew(10deg, 15deg);
+}
+
+.header__title {
+  margin: 50px 0 100px;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+  color: whitesmoke;
+  transition: transform 1s linear;
+}
+
+.header__title:hover {
+  transform: scale(1.5);
 }
