--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@
   transition: transform 1s linear;
 }
 
-.card .card__image-skew:hover {
+.card .card__image-skew {
   transition: transform 2s ease-in-out;
 }
 
